# backend

./: .env.example  .gitignore  Dockerfile  Makefile  docker-compose.yaml  invoice - счет.txt  pyproject.toml  requirements.txt
deploy/: casdoor.env  casdoor.env.example
deploy/backend/: settings.toml
deploy/casdoor/: app.conf
src/: app.py  exceptions.py  main.py
src/application/auth/: auth.py  interface.py  interfaces.py
src/application/auth/interfaces/: auth_interface.py
src/application/auth/repos/: user_repo.py
src/application/box/dto/: box.py  box_create.py  box_update.py  boxes.py
src/application/box/interfaces/: box_mutator.py  box_reader.py
src/application/client/dto/: client.py  client_create.py  client_update.py  clients.py
src/application/client/interfaces/: client_mutator.py  client_reader.py
src/application/common/: dto.py  entity_mutator.py  exceptions.py
src/application/common/filters/: filter.py
src/application/flower_in_box/dto/: flower_in_box.py  flower_in_box_create.py  flower_in_box_update.py  flowers_in_box.py
src/application/flower_in_box/interfaces/: flower_in_box_mutator.py  flower_in_box_reader.py
src/application/income_invoice/dto/: income_invoice.py  income_invoice_create.py  income_invoice_update.py  income_invoices.py
src/application/income_invoice/interfaces/: income_invoice_mutator.py  income_invoice_reader.py
src/application/order/dto/: order.py  order_create.py  order_update.py  orders.py
src/application/order/interfaces/: order_mutator.py  order_reader.py
src/infra/auth/: auth.py  exceptions.py  user_manager.py
src/infra/cache/: device_fingerprint.py
src/infra/casdoor/: auth.py  exceptions.py  setup.py
src/infra/database/: session.py
src/infra/log/: __init__.py  log.py
src/infra/postgres/: retort.py  session.py  setup.py  types.py
src/presentation/: app.py  exceptions.py
src/presentation/fastapi/: dependencies.py
src/presentation/routers/: dependencies.py  middlewares.py
(+137 files in other folders)
