[tool.poetry]
name = "flowersbij"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
psycopg = "^3.1.12"
pydantic = "^2.4.2"
adaptix = "^3.0.0a7"
psycopg-pool = "^3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
