[tool.poetry]
name = "flowersbij"
version = "0.1.0"
description = "Cactuses"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
asyncpg = "^0.28.0"
sqlalchemy = "^2.0.21"
alembic = "^1.12.0"
pydantic = "^2.4.1"
structlog = "^23.1.0"
uvicorn = "^0.23.2"
miniopy-async = "^1.15"
dynaconf = "^3.2.3"
aiohttp = "3.8.5"
annotated-types = "0.5.0"
inflection = "^0.5.1"
python-multipart = "^0.0.6"

[tool.poetry.dev-dependencies]
pytest = "7.3.2"
mypy = "1.3.0"
black = "23.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
