[tool.poetry]
name = "flowersbij"
version = "0.1.0"
description = "Cactuses"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
asyncpg = "^0.28.0"
sqlalchemy = "^2.0.21"
alembic = "^1.12.0"
pydantic = "^2.4.1"
structlog = "^23.1.0"
uvicorn = "^0.23.2"
miniopy-async = "^1.15"
dynaconf = "^3.2.3"
aiohttp = "3.8.5"
annotated-types = "0.5.0"
inflection = "^0.5.1"
python-multipart = "^0.0.6"
casdoor = "1.17.2"
isort = "^5.12.0"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
mypy = "^1.7.1"
pytest = "7.2.0"
pytest-cov = "4.0.0"
types-requests = "2.27.27"
flake8 = "^6.0.0"
dlint = "^0.14.1"
flake8-bugbear = "^23.6.5"
flake8-pie = "^0.16.0"
flake8-simplify = "^0.20.0"
flake8-warnings = "^0.4.0"
flake8-comprehensions = "^3.13.0"
flake8-eradicate = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
